Add date range filtering to dashboard statistics
Dashboard statistics service and related methods now support filtering by start and end dates. SharedRideRepository gains countByStatus for efficient ride status queries. Monthly, hourly, and status distribution statistics are now generated based on the provided date range, improving dashboard flexibility and accuracy.